@@ -23,8 +23,8 @@ setup(
     long_description_content_type="text/markdown",
     license="Apache License 2.0",
     packages=find_packages(),
-    install_requires=["apache-airflow>=2.0", "avmesos>=0.4.0", "waitress", "flask_httpauth"],
-    setup_requires=["avmesos>=0.4.0", "waitress", "flask_httpauth"],
+    install_requires=["apache-airflow>=2.0", "avmesos>=0.4.0", "waitress", "flask_httpauth", "prometheus-client"],
+    setup_requires=["avmesos>=0.4.0", "waitress", "flask_httpauth", "prometheus-client"],
     author="Andreas Peters",
     author_email="support@aventer.biz",
     url="https://www.aventer.biz/",
